# IMFViewer

./: .gitignore  .gitmodules  CMakeLists.txt  Copying.md  README.md
Documentation/1_UsingIMFViewer/: [A]_UserInterface.md  [B]_ImportingAMontageDataset.md  [C]_ImportingOtherDatasets.md  [D]_ManipulatingDatasets.md  [E]_AdvancedOptions.md
Resources/: ThirdParty.qrc
Resources/CPack/: PackageProject.cmake
Resources/OpenSourceEdition/: BrandedStrings.h  branded_files.qrc
Resources/OpenSourceEdition/icons/icns/: IMFViewer.icns
Resources/OpenSourceEdition/packaging/: IMFViewer_DMGBackground.afdesign  LinuxPackage.sh  SignDREAM3D.sh  WinPackage.bat
Resources/OpenSourceEdition/splash/: IMFViewer_splash.afdesign
Resources/icons/: IMFViewer.afdesign
Resources/icons/images/: Icons.qrc
Source/Applications/IMFViewer/: CMakeLists.txt  IMFController.cpp  IMFController.h  IMFViewerApplication.cpp  IMFViewerApplication.h  IMFViewerMenu.cpp  IMFViewerMenu.h  IMFViewer_UI.cpp  IMFViewer_UI.h  main.cpp
Source/Applications/IMFViewer/Dialogs/: LoadHDF5FileDialog.cpp  LoadHDF5FileDialog.h  SourceList.cmake
Source/Applications/IMFViewer/Dialogs/UI_Files/: LoadHDF5FileDialog.ui
Source/Applications/IMFViewer/Dialogs/Utilities/: DREAM3DFileItem.cpp  DREAM3DFileItem.h  DREAM3DFileItemDelegate.cpp  DREAM3DFileItemDelegate.h  DREAM3DFileTreeModel.cpp  DREAM3DFileTreeModel.h  SourceList.cmake
Source/Applications/IMFViewer/UI_Files/: IMFViewer.ui  IMFViewer_UI.ui
Source/Plugins/: Plugins.cmake
